# swc-dotnet

./: .gitignore  .nx-dotnet.rc.json  README.md  SwcDotNet.sln  nx.json  package.json
Playground/: Playground.csproj  Program.cs
SwcDotNet.Native/: SwcDotNet.Native.Linux_x86_64.csproj
SwcDotNet.Native/binding_core_dotnet/: Cargo.toml
apps/Playground/: Playground.csproj  Program.cs  project.json
apps/ts-analyzer/: DocumentParseException.cs  ICodeDocumentParser.cs  TsAnalyzer.csproj  TsDocParser.cs  project.json
apps/ts-analyzer.Test/: TsAnalyzer.Test.csproj  TsDocParserTests.Multiple_type_aliases.verified.txt  TsDocParserTests.TypeAlias.verified.txt  TsDocParserTests.TypeAliasWithComment.verified.txt  TsDocParserTests.Variable_single.verified.txt  TsDocParserTests.cs  project.json
apps/ts-analyzer/Model/: CodeDocument.cs
libs/SwcDotNet/: SwcDotNet.csproj  SwcParser.cs  SwcWrapInterop.cs  TsParserConfig.cs  Utils.cs  project.json
libs/SwcDotNet.Native/: project.json
libs/SwcDotNet.Native.Linux_x86_64/: SwcDotNet.Native.Linux_x86_64.csproj  project.json
libs/SwcDotNet.Native/binding_core_dotnet/src/: lib.rs  parse.rs  util.rs
libs/SwcDotNet.Native/binding_core_dotnet/tests/: bindings.rs
libs/binding/: Cargo.toml  project.json
libs/binding/tests/: bindings.rs
libs/native/: project.json
libs/native/bindings/csharp/: SwcWrapInterop.cs
libs/native/src/: lib.rs  parse.rs  util.rs
libs/native/tests/: bindings.rs
